--- a/launcher.html
+++ b/launcher.html
@@ -24,7 +24,7 @@
 			<h1>Meet Colossus a Clean & Modern Multi-purpose HTML Template</h1>
 			<div class="home_buttons d-flex flex-row align-items-start justify-content-start">
 				<div class="button button_a scrollLink" data-scroll-to="#page_options"><a><i class="fa fa-search" aria-hidden="true"></i><span>view layouts</span></a></div>
-				<div class="button button_b"><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true" style="margin-right:4px;"></i><span>buy template</span></a></div>
+				<div class="button button_b"><a href="https://themeforest.net/item/colossus-multipurpose-html5-template/23879854"><i class="fa fa-shopping-cart" aria-hidden="true" style="margin-right:4px;"></i><span>buy template</span></a></div>
 			</div>
 		</div>
 	</div>
